fail_crate/tests/no_bool_after_no_prefix.rs
use inew::New;

#[derive(New)]
#[new(no_prefix =)]
enum A {}

fn main() {}
